--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,18 +31,18 @@ jobs:
         continue-on-error: false
 
   # Optional: build Docker image (uncomment if you want to push to a registry)
-  # docker-build:
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-test
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
-  #     - name: Build image
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: .
-  #         push: false
-  #         tags: school:latest
-  #         cache-from: type=gha
-  #         cache-to: type=gha,mode=max
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          tags: school:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
